player and enemy set

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
     <script src="./Scripts/objects/button.js"></script>
     <script src="./Scripts/objects/ocean.js"></script>
     <script src="./Scripts/objects/player.js"></script>
+    <script src="./Scripts/objects/player-plane/player-plane.js"></script>
     <script src="./Scripts/objects/island.js"></script>
     <script src="./Scripts/objects/cloud.js"></script>
+    <script src="./Scripts/objects/enemy-plane/enemy-plane.js"></script>
     <script src="./Scripts/objects/scene.js"></script>
 
     <!-- Managers continued  -->
@@ -47,6 +49,7 @@
     <!-- Scenes -->
     <script src="./Scripts/scenes/over.js"></script>
     <script src="./Scripts/scenes/play.js"></script>
+    <script src="./Scripts/scenes/level-two/level-two.js"></script>
     <script src="./Scripts/scenes/start.js"></script>
 
     <!-- Core Game Scripts -->
